examples/test/testpolicy17487.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17487
  namespace: namespace404
spec:
  podSelector:
    matchLabels:
      key8: value46
      key41: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value48
          key38: value28
      podSelector:
        matchLabels:
          key13: value42
          key47: value0
